<resources>
    <string name="app_name">ScientificCalculator</string>

    <string name="oneText">1</string>
    <string name="twoText">2</string>
    <string name="threeText">3</string>
    <string name="fourText">4</string>
    <string name="fiveText">5</string>
    <string name="sixText">6</string>
    <string name="sevenText">7</string>
    <string name="eightText">8</string>
    <string name="nineText">9</string>
    <string name="zeroText">0</string>

    <string name="clearText">C</string>
    <string name="parenthesesOpenText">(</string>
    <string name="parenthesesCloseText">)</string>
    <string name="divideText">/</string>
    <string name="multiplyText">x</string>
    <string name="addText">+</string>
    <string name="subtractText">-</string>
    <string name="equalsText">=</string>
    <string name="decimalText">.</string>

    <string name="sinText">sin</string>
    <string name="cosText">cos</string>
    <string name="tanText">tan</string>
    <string name="ArcsinText">Arcsin</string>
    <string name="ArccosText">Arccos</string>
    <string name="ArctanText">Arctan</string>
    <string name="lnText">ln</string>
    <string name="logText">log</string>
    <string name="sqrtText">√</string>
    <string name="absoluteValueText">|x|</string>
    <string name="piText">π</string>
    <string name="eText">e</string>
    <string name="factorialText">!</string>
    <string name="xSquaredText">x<sup><small>2</small></sup></string>
    <string name="xPowerYText">x<sup><small>y</small></sup></string>
    <string name="isPrimeText">isPrime</string>

    <string name="backspace"> </string>

</resources>